Will now read existing page size when loading DB instead of overriding old page size with new page size